[project]
name = "sqlalchemy-repository"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Vladyslav Chaliuk", email = "chaliukvladyslav@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0.49",
]

[build-system]
requires = ["uv_build>=0.10.11,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.12",
]
