[project]
name = "sqlalchemy-repository"
version = "1.1.1"
description = "Repository and Django-like QuerySet layers for SQLAlchemy with async support"
readme = "README.md"
authors = [
    { name = "Vladyslav Chaliuk", email = "chaliukvladyslav@gmail.com" }
]
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = [
    "sqlalchemy",
    "repository",
    "queryset",
    "orm",
    "filters",
    "async"
]
classifiers = [
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "sqlalchemy>=2.0.49",
]

[project.urls]
Homepage = "https://github.com/AstralMortem/sqlalchemy-repository"
Repository = "https://github.com/AstralMortem/sqlalchemy-repository"
Issues = "https://github.com/AstralMortem/sqlalchemy-repository/issues"

[build-system]
requires = ["uv_build>=0.10.11,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.12",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py310"
